--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ html {
   margin-bottom: 3em;
   @media screen and (max-width: 1000px) {
     min-height: 350px;
-    width: 60vw;
+    width: 70vw;
   }
   @media screen and (min-width: 1000px) {
     width: 40vw;
@@ -69,7 +69,7 @@ html {
     width: 80%;
   }
   @media screen and (max-width: 1000px) {
-    width: 120%;
+    width: 110%;
   }
 }
 
@@ -148,4 +148,77 @@ html {
   top: -10px;
   transform: scale(1);
   transition: all 0.5s;
+}
+
+.icon {
+  outline-offset: 4px;
+}
+
+.icon i {
+  margin: auto;
+}
+.icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  justify-self: center;
+}
+.icon img {
+  width: 30px;
+  aspect-ratio: 1;
+}
+.icon i,
+.icon img {
+  animation: shake 0.25s;
+}
+
+.icon--instagram {
+  outline-color: #a02d76;
+  color: white;
+}
+
+.icon--twitter {
+  outline-color: #191919;
+  color: white;
+}
+
+.icon--linkedin {
+  outline-color: #0077b5;
+  color: white;
+}
+
+.icon--facebook {
+  outline-color: rgb(40, 85, 182);
+  color: white;
+}
+
+.sc-icons {
+  padding-top: max(0.7vw, 0.65vh);
+  display: flex;
+  column-gap: 25px;
+  font-size: max(5vh, 5vw);
+  align-items: center;
+  justify-content: center;
+}
+
+.icon {
+  display: inline-flex;
+  width: 40px;
+  height: 40px;
+  text-decoration: none;
+  font-size: 25px;
+  border-radius: 60%;
+  outline: 2px solid #fff;
+  transition-property: outline-offset, outline-color, background-color;
+  transition-duration: 0.25s;
+  column-gap: 25px;
+  align-items: center;
+}
+
+li.link {
+  transition: all 700ms;
+  opacity: 2;
+  transform: scale(1.1);
+  text-align: justify;
 }
