--- a/style.css
+++ b/style.css
@@ -13,10 +13,11 @@ html {
   align-items: center;
   font-family: "lemon milk";
   justify-content: space-evenly;
-  background:url('./images/3d-modern-background-with-cyber-particles.jpg') no-repeat fixed ;
-  background-size: 100vw 100vh ;
+  background: url("./images/3d-modern-background-with-cyber-particles.jpg")
+    no-repeat fixed;
+  background-size: 100vw 150vh;
 }
-#head{
+#head {
   font-family: "ethnocent";
 }
 .singup {
@@ -52,7 +53,7 @@ html {
 .enter {
   font-family: "Sub Heading";
   border-radius: 25px;
-  min-width: max(25%,150px);
+  min-width: max(25%, 150px);
   border: 2px solid #e5e5e5;
   cursor: pointer;
   color: #e5e5e5;
@@ -66,76 +67,6 @@ html {
 
 .enter:hover {
   color: white;
-}.label {
-  min-width: 90%;
-  --border: rgba(66, 66, 66, 0.733);
-  --bgLabel: rgba(120,120,120,1);
-  --bgInput: rgba(255,255,255,1);
-  --color-light: black;
-  --color-light-a: rgb(133, 123, 150);
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: min-content min-content;
-  position: relative;
-  font-size: .65rem;
-  transition: all .3s ease-out;
-}
-
-.label > .label-title {
-  border: 1px solid var(--color-light);
-  color: var(--color-light);
-  padding: .25em .5em;
-  background-color: var(--bgInput);
-  grid-column: 1/span 1;
-  grid-row: 1/span 1;
-  position: relative;
-  border-radius: 4px;
-  translate: 10px -10px;
-  font-size: max(1.5vh,1vw);
-  transition: all .5s ease-out .5s;
-  z-index: 10;
-}
-
-.label:focus .input,
-.label:focus-within .input {
-  background-color: rgba(0,0,0,0.7);
-  padding: 1em;
-  color: white;
-  border: 2px solid var(--color-light);
-  outline: 2px solid var(--color-light);
-  outline-offset: -2px;
-  border-radius: 12px;
-  box-shadow: 0 5px 10px rgba(98, 0, 255, .25), 0 -5px 20px rgba(98, 0, 255,.1);
-  transition: all .5s cubic-bezier(0,1.46,1,1.62) .3s;
-}
-
-.label:focus,
-.label:focus-within .label-title {
-  translate: 10px -20px;
-  border-radius: 4px 4px 0 0;
-  z-index: 0;
-  font-size: unset;
-  transition: all .3s cubic-bezier(0,1.46,1,1.62);
-}
-
-.input {
-  min-height: max(25px);
-  appearance: none;
-  border-radius: 15px;
-  border-top: 2px solid transparent;
-  border-right: 2px solid transparent;
-  border-bottom: 2px solid transparent;
-  border-left: 2px solid transparent;
-  background-color: var(--bgInput);
-  caret-color: var(--color-light);
-  min-width: 100%;
-  padding: 1.25em 1em .25em;
-  outline: 0px solid var(--color-light);
-  grid-column: 1/-1;
-  grid-row: 1 / -1;
-  position: relative;
-  transition: all .3s cubic-bezier(.5,.6,.5,.62);
-  z-index: 0;
 }
 
 .icon {
@@ -197,7 +128,7 @@ html {
   text-decoration: none;
   font-size: 25px;
   border-radius: 60%;
-  outline: 2px solid #fff;
+  outline: 3px solid #fff;
   transition-property: outline-offset, outline-color, background-color;
   transition-duration: 0.25s;
   column-gap: 25px;
@@ -210,3 +141,97 @@ li.link {
   transform: scale(1.1);
   text-align: justify;
 }
+
+.user-box {
+  position: relative;
+  @media screen and (max-width: 1000px) {
+    width: 60vw;
+  }
+  @media screen and (min-width: 1000px) {
+    width: 37vw;
+  }
+}
+
+.user-box input {
+  width: 100%;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  margin-bottom: 30px;
+  border: none;
+  border-bottom: 1px solid #fff;
+  outline: none;
+  background: transparent;
+}
+
+.user-box label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 10px 0;
+  font-size: 16px;
+  color: #fff;
+  pointer-events: none;
+  transition: 0.5s;
+}
+
+.user-box input:focus ~ label,
+.user-box input:valid ~ label {
+  top: -20px;
+  left: 0;
+  color: #bdb8b8;
+  font-size: 12px;
+}
+
+form a {
+  position: relative;
+  display: inline-block;
+  padding: 10px 20px;
+  color: #ffffff;
+  font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  transition: 0.5s;
+  margin-top: 40px;
+  letter-spacing: 4px;
+}
+
+a:hover {
+  background: #03f40f;
+  color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 5px #03f40f, 0 0 25px #03f40f, 0 0 50px #03f40f,
+    0 0 100px #03f40f;
+}
+
+a span {
+  position: absolute;
+  display: block;
+}
+
+@keyframes btn-anim1 {
+  0% {
+    left: -100%;
+  }
+
+  50%,
+  100% {
+    left: 100%;
+  }
+}
+
+a span:nth-child(1) {
+  bottom: 2px;
+  left: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #03f40f);
+  animation: btn-anim1 2s linear infinite;
+}
+@media screen and (min-width: 1000px) {
+  .sc-icons{
+    transform: translateY(-6vh);
+  }
+}
+
